# yang2sdk

./: .env.example  .gitingestignore  AI-assistant.md  NOTICE  README.md  ai-assistant.md  pyproject.toml
src/yang2sdk/: __init__.py
src/yang2sdk/cli/: canonicalize_ast.py  compiler.py  downloader.py  tester.py
src/yang2sdk/plugin/: __init__.py  plugin_wrapper.py
src/yang2sdk/plugin/src/: __init__.py  core.py  ir.py
src/yang2sdk/plugin/src/templates/netconf/: __init__.py.jinja  session_manager.py.jinja
src/yang2sdk/plugin/src/templates/netconf/data_models/: __init__.py.jinja  _base.py.jinja  models.py.jinja
src/yang2sdk/plugin/src/templates/netconf/data_navigators/: __init__.py.jinja  _base.py.jinja  navigators.py.jinja
src/yang2sdk/plugin/src/templates/restconf/data_models/: __init__.py.jinja
src/yang2sdk/plugin/src/templates/restconf/data_navigators/: navigators.py.jinja
src/yang2sdk/plugin/src/templates/sdk/: __init__.py.jinja  session_manager.py.jinja
src/yang2sdk/plugin/src/templates/sdk/data_models/: _base.py.jinja  models.py.jinja
src/yang2sdk/plugin/src/templates/sdk/data_navigators/: __init__.py.jinja  _base.py.jinja
src/yang2sdk/plugin/src/templates/sdk/user_templates/: __init__.py.jinja
utils/pyang_plugins/: yang2restconf.py
utils/pyang_plugins/yang2sdk/: core.py  ir.py
utils/pyang_plugins/yang2sdk/templates/: models.py.jinja  models_init.py.jinja  navigators.py.jinja  navigators_init.py.jinja
